fix (chat auto focus + z-index blocks)

--- a/src/modules/admin/scss/_punishment-modal.scss
+++ b/src/modules/admin/scss/_punishment-modal.scss
@@ -1,7 +1,7 @@
 .admin-context {
   .punishment-modal {
     position: absolute;
-    z-index: 4;
+    z-index: 13;
     width: 460px;
     height: 460px;
     top: 50%;
@@ -9,7 +9,7 @@
     margin-top: -230px;
     margin-left: -230px;
 
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, .8);
     border-radius: 15px;
 
     display: flex;
